<?xml version="1.0"?>
<package format="3">
  <name>abb_irb4600_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and meshes for the ABB IRB4600-40/2.55 industrial robot.</description>

  <maintainer email="daniel.ruan@princeton.edu">Daniel Ruan</maintainer>
  <author>Daniel Ruan</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
